# api-categories

./: .env.example  Cargo.toml  Dockerfile  Makefile.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yaml  lint.yaml  publish.yaml  test.yaml
benches/: category-insert-db.rs  category-serde.rs  graphql-interface.rs
crates/api-core/: Cargo.toml
crates/api-core/src/: lib.rs
crates/api-core/src/api/: mod.rs
crates/api-core/src/id/: input.rs  mod.rs  output.rs
crates/api-core/src/tests/: async_graphql.rs  db.rs  mod.rs
crates/api-database/: Cargo.toml
crates/api-database/src/: collections.rs  entity.rs  lib.rs
crates/api-database/src/mutation/: mod.rs
crates/api-database/src/query/: mod.rs
crates/api-database/src/redis/: cache_keys.rs  mod.rs  redis_query.rs
crates/api-database/src/tests/: mod.rs  mutation.rs  query.rs  redis.rs
crates/api-interface/: Cargo.toml
crates/api-interface/src/: lib.rs
crates/api-interface/src/graphql/: mod.rs  model.rs
crates/api-interface/src/graphql/mutation/: category.rs  mod.rs
crates/api-interface/src/graphql/query/: category.rs  mod.rs
crates/api-interface/src/graphql/query/pagination/: mod.rs
crates/api-interface/src/graphql/subscription/: category.rs  mod.rs
crates/api-interface/src/tests/: mod.rs  mutation.rs  query.rs  subscription.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs
crates/api-server/src/routes/: mod.rs
crates/api-server/src/routes/middleware/: graphql.rs  mod.rs
crates/api-server/src/state/: env.rs  mod.rs
crates/api-server/src/telemetry/: mod.rs  tracing.rs
crates/api-server/src/tests/: mod.rs
