[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
api-core = { path = "./crates/api-core", default-features = false }
api-database = { path = "./crates/api-database" }
async-graphql = { version = "7.0.0", default-features = false }
async-graphql-axum = { version = "7.0.0" }
criterion = "0.5.1"
fake = "2.9.2"
opentelemetry = "0.21.0"
serde = "1.0.195"
serde_json = "1.0.111"
surrealdb = "1.0.2"
thiserror = "1.0.56"
tokio = "1.35.1"
tracing = "0.1.40"
trait-variant = "0.1.1"
