[package]
name = "api-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core = { workspace = true, features = ["serde", "surrealdb"] }
serde.workspace = true
serde_json = "1.0.111"
surrealdb.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
dotenvy.workspace = true
tokio = { workspace = true, features = ["macros"] }
