[package]
name = "api-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core.workspace = true
api-database.workspace = true
async-graphql = { workspace = true, features = ["tracing", "opentelemetry", "playground", "uuid"] }
opentelemetry.workspace = true
slab = "0.4.9"
thiserror.workspace = true
tracing.workspace = true
